<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".showDetails.UserAccountActivity">

    <TextView
        android:id="@+id/user_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/user_account_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/user_account_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_account_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:text="@string/user_account_id_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/user_account_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_account_title"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/user_account_id_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_account_btn_copy"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_account_id"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/user_account_btn_copy"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_account_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_account_btn_copy"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_account_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_account_et_name"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_account_btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_account_et_email"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/user_account_btn_update"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:cornerRadius="15dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_account_btn_delete_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_account_btn_update"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/red"
        android:text="@string/user_account_btn_delete"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:cornerRadius="15dp" />

</RelativeLayout>